--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/pixyll"]
 	path = themes/pixyll
 	url = https://github.com/kytrinyx/hugo-theme-pixyll.git
+[submodule "public"]
+	path = public
+	url = git@github.com:exercism/exercism.github.io.git
